[project]
name = "mas-openclaw"
version = "1.0.0"
description = "Multi-Agent System with autonomous search - Perplexity-like experience powered by Qwen2.5:14b"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # MAS Framework
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    
    # LLM & Embeddings
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
    "ollama>=0.4.0",
    
    # Search & Web
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.4.0",
    "lxml>=5.0.0",
    "trafilatura>=1.8.0",
    "playwright>=1.44.0",
    
    # Document Processing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "markdownify>=0.12.0",
    
    # Data & Utils
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.0",
    
    # Web UI
    "streamlit>=1.36.0",
    "streamlit-extras>=0.4.0",
    
    # Async
    "asyncio-throttle>=1.0.2",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
mas = "utils.cli:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends._legacy:_Backend"
